[project]
dependencies = []
name = "hazyhorizon"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
hazyhorizon = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff]
line-length = 88

[tool.ruff.pydocstyle]
convention = "numpy"
